# rust-log

./: .gitignore  Cargo.toml  Makefile  rustlog.h
platform/android/: settings.gradle.kts
platform/android/app/: build.gradle.kts
platform/android/app/src/main/java/com/example/android/: MainActivity.kt
platform/android/gradle/: libs.versions.toml
platform/android/gradle/wrapper/: gradle-wrapper.properties
platform/android/nlog/: build.gradle.kts
platform/android/nlog/src/androidTest/java/com/example/nlog/: ExampleInstrumentedTest.kt
platform/android/nlog/src/main/cpp/: CMakeLists.txt  nlog.cpp
platform/android/nlog/src/main/java/com/example/nlog/: NativeLib.kt
platform/ios/ios/: ContentView.swift  ios-Bridging-Header.h  iosApp.swift
platform/ios/ios.xcodeproj/: project.pbxproj
platform/ios/ios.xcodeproj/project.xcworkspace/xcuserdata/xiaqiulei.xcuserdatad/: UserInterfaceState.xcuserstate
platform/ios/ios.xcodeproj/xcuserdata/xiaqiulei.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
platform/ios/iosTests/: iosTests.swift
platform/ios/iosUITests/: iosUITests.swift  iosUITestsLaunchTests.swift
src/: android.rs  ios.rs  lib.rs  log.rs  test.rs
