[package]
name = "rustlog"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]  # 关键：生成 C 兼容动态库

[dependencies]
libc = "0.2"
chrono = "0.4"
once_cell = "1.19"
log = "0.4.27"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.15.0"
#ndk = "0.9.0"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"